# OpenCV-Cpp-Projects

./: CMakeLists.txt  README.md  main.cpp
include/: color_detector.hpp  shape_detection.hpp  shape_detector.hpp  virtual_printer.hpp
src/: color_detector.cpp  shape_detection.cpp  shape_detector.cpp  virtual_printer.cpp
